--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ requests = "*"
 "e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
+pytest = "*"
+requests-mock = "*"
 
 [requires]
 python_version = "3.6"
