--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 "beautifulsoup4" = "*"
 requests = "*"
 "e1839a8" = {path = ".", editable = true}
+pyaml = "*"
 
 [dev-packages]
 pytest = "*"
