chore: Update .pre-commit-config.yaml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,16 @@ repos:
     sha: v1.1.1
     hooks:
     -   id: flake8
--   repo: git://github.com/chewse/pre-commit-mirrors-pydocstyle
+-   repo: https://github.com/pycqa/pydocstyle
     rev: master
     hooks:
     -   id: pydocstyle
+        exclude: test_*
+-   repo: https://github.com/asottile/seed-isort-config
+    rev: v1.2.0
+    hooks:
+    -   id: seed-isort-config
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: master
+    hooks:
+    -   id: isort
