--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_third_party = cc_products,ccapi,django,fabric,humanize,isoweek,jchart,labeler,list_input,openpyxl,order_profit,orderable,pytz,requests,tabler,toml
+known_third_party = bs4,requests,requests_mock,setuptools,yaml
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
