fix: Update Pipfile.lock

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ pyyaml = "*"
 pytest = "*"
 requests-mock = "*"
 pytest-cov = "*"
+flake8 = "*"
+flake8-docstrings = "*"
+black = {git = "https://github.com/psf/black.git",ref = "master",editable = true}
+coveralls = "*"
 
 [requires]
 python_version = "3.8"
