--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_third_party = bs4,requests,requests_mock,setuptools,yaml
+known_third_party = bs4,requests,requests_mock,yaml
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
