--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "^3.7.9"
 flake8-docstrings = "^1.5.0"
 black = "^19.10b0"
 coveralls = "^1.11.1"
+isort = "^4.3.21"
 
 [build-system]
 requires = ["poetry>=0.12"]
