--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "^3.9.2"
 black = "^21.5b2"
 coveralls = "^3.2.0"
 isort = "^5.9.3"
+flake8-docstrings = "^1.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
